2007-01-18  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex-jp.el: Update maintainer email address.

	* style/verbatim.el: Update author email address.

2007-01-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex.el (TeX-clean-default-intermediate-suffixes): Add beamer
	suffixes.

2007-01-16  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex-jp.el (japanese-TeX-command-list): Use "%`" and "%'" magic
	to allow file names with spaces.  See also change log for
	TeX-command-list in tex.el on 2006-10-10.
	Reported by Ikumi Keita	<ikumi@ikumi.que.jp>.

2007-01-14  Ralf Angeli  <angeli@caeruleus.net>

	* doc/wininstall.texi: Add copyright notice and licence reference.
	Mention --infodir.  Some clean-ups.

2007-01-13  Ralf Angeli  <angeli@caeruleus.net>

	* Makefile.in (www-doc): Generate AUCTeX and preview-latex manuals
	in single directory.  Patch gendocs.sh to use texi2html instead of
	makeinfo (patch not included).

2007-01-12  Ralf Angeli  <angeli@caeruleus.net>

	* Version 11.84 released.

2007-01-12  Ralf Angeli  <angeli@caeruleus.net>

	* RELEASE: Update for release.

	* doc/changes.texi: Update for release.

	* auctex.spec (Version): Bump version number.

	* configure.ac: Bump version number.

	* doc/tex-ref.tex: Bump version number.

2007-01-11  Ralf Angeli  <angeli@caeruleus.net>

	* Makefile.in (STYLESRC): Add style/polski.el.

	* RELEASE: Mention support for `polski' LaTeX package.

	* style/polski.el: New file.

	* doc/auctex.texi (European): Mention `polski' language option.

2007-01-08  Ralf Angeli  <angeli@caeruleus.net>

	* RELEASE: Document some new features.

	* style/polish.el: New file.

	* Makefile.in (STYLESRC): Add style/polish.el.

	* doc/auctex.texi (European): Remove references to `plfonts' and
	`plhb' styles for typesetting Polish text because they seem to be
	out of use.  Refer to the `polish' option for the babel LaTeX
	package instead.

	* tex.el (TeX-quote-language-alist): Replace references to
	`plfonts' and `plhb' by `polish'.
